scrollbar fix

--- a/src/app/containers/default-layout/default-layout.component.css
+++ b/src/app/containers/default-layout/default-layout.component.css
@@ -32,6 +32,5 @@
     margin-top: -20px;
     position: relative;
     z-index: 2;
-    color: rgb(153, 153, 153)
-    ;
+    color: rgb(153, 153, 153);
 }
